--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,10 +1,23 @@
+@import "globals";
+
+:host, mat-sidenav-container {
+  display: block;
+  height: 100%
+}
+
 :host {
-  * {
-    font-family: Consolas, monospace;
+  .main-menu-container {
+    width: @mainMenuWidth;
+    padding: @defaultPadding;
+
+    button {
+      width: calc(@mainMenuWidth - 2 * @defaultPadding - @defaultBorderWidth);
+      justify-content: flex-start;
+      margin: 5px 0;
+    }
   }
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  .main-container {
+    padding: @defaultPadding;
+  }
 }
