--- a/src/styles.less
+++ b/src/styles.less
@@ -1,12 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 0;
 }
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+html * {
+  box-sizing: border-box;
 }
+
