--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,7 +10,7 @@
     width: @mainMenuWidth;
     padding: @defaultPadding;
 
-    button {
+    button, a {
       width: calc(@mainMenuWidth - 2 * @defaultPadding - @defaultBorderWidth);
       justify-content: flex-start;
       margin: 5px 0;
