Added active page highlighting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <mat-sidenav-container>
     <mat-sidenav opened mode="side" class="main-menu-container">
-        <a mat-button routerLink="/home" routerLinkActive="mat-primary">
+        <a mat-button routerLink="/home" routerLinkActive="active">
             <mat-icon>home</mat-icon>
             Home
         </a>
-        <a mat-button routerLink="/links" routerLinkActive="mat-primary">
+        <a mat-button routerLink="/links" routerLinkActive="active">
             <mat-icon>link</mat-icon>
             Links
         </a>
-        <a mat-button routerLink="/about" routerLinkActive="mat-primary">
+        <a mat-button routerLink="/about" routerLinkActive="active">
             <mat-icon>person</mat-icon>
             About
         </a>
