--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,40 +1,54 @@
 @import "globals";
 
-:host, mat-sidenav-container {
-  display: block;
-  height: 100%
-}
-
 :host {
-  mat-sidenav {
-    width: @mainMenuWidth;
-    padding: @defaultPadding;
+  display: block;
+  height: 100%;
 
-    a {
-      width: calc(@mainMenuWidth - 2 * @defaultPadding - @defaultBorderWidth);
-      justify-content: flex-start;
-      margin: 5px 0;
-      padding-left: 20px;
+  header {
+    width: 100%;
+    height: @headerHeight;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding-left: @defaultPadding;
+    gap: @defaultPadding;
 
-      &.active {
-        backdrop-filter: brightness(95%);
-        border-left: 3px solid gray;
-        padding-left: 17px;
-      }
+    img {
+      width: 2rem;
+      height: 2rem;
     }
 
-    button[mat-icon-button] {
-      position: absolute;
-      bottom: 10px;
+    h1 {
+      margin: 0;
+      white-space: nowrap;
     }
   }
 
-  mat-sidenav-content {
-    padding: @defaultPadding;
+  mat-sidenav-container {
+    height: calc(100% - @headerHeight);
+    background-color: initial;
 
-    button[mat-icon-button] {
-      position: absolute;
-      bottom: 10px;
+    mat-sidenav {
+      width: @mainMenuWidth;
+      padding: @defaultPadding * 0.6;
+      border-right: 0;
+
+      a {
+        width: 100%;
+        justify-content: flex-start;
+        margin: 0.4rem 0;
+        padding-left: @defaultPadding;
+
+        &.active {
+          background-color: @defaultHighlightColor;
+          border-left: 3px solid gray;
+          padding-left: calc(@defaultPadding - 3px);
+        }
+      }
+    }
+
+    mat-sidenav-content {
+      padding: @defaultPadding;
     }
   }
 }
