--- a/src/app/globals.less
+++ b/src/app/globals.less
@@ -1,3 +1,6 @@
-@mainMenuWidth: 200px;
-@defaultPadding: 20px;
+@mainMenuWidth: 10rem;
+@headerHeight: 3.5rem;
+@defaultPadding: 1rem;
 @defaultBorderWidth: 1px;
+@defaultHighlightColor: rgb(200 200 200 / 15%);
+@defaultBorder: @defaultBorderWidth solid @defaultHighlightColor;
