New main menu and main header components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,10 @@
 <mat-toolbar>
-    <button mat-icon-button (click)="sidenav.toggle()" title="Toggle menu">
-        <mat-icon>menu</mat-icon>
-    </button>
-    <img src="assets/images/angular.png"> <h1>Pikus-dev.space</h1>
+    <main-header (onMenuClick)="sidenav.toggle()"></main-header>
 </mat-toolbar>
 <mat-progress-bar mode="indeterminate" [style.visibility]="loading ? 'visible' : 'hidden'"></mat-progress-bar>
 <mat-sidenav-container>
     <mat-sidenav #sidenav opened mode="side">
-        <a mat-button routerLink="/home" routerLinkActive="active">
-            <mat-icon>home</mat-icon>
-            Home
-        </a>
-        <a mat-button routerLink="/links" routerLinkActive="active">
-            <mat-icon>link</mat-icon>
-            Links
-        </a>
-        <a mat-button routerLink="/about" routerLinkActive="active">
-            <mat-icon>person</mat-icon>
-            About
-        </a>
+        <main-menu></main-menu>
     </mat-sidenav>
     <mat-sidenav-content>
         <router-outlet></router-outlet>
