--- a/src/app/main-menu/main-menu.component.less
+++ b/src/app/main-menu/main-menu.component.less
@@ -1,14 +1,18 @@
 @import "./../globals";
+:host {
+  mat-nav-list {
+    a {
+      border-left: 3px solid transparent;
 
-mat-nav-list {
-  mat-icon {
-    vertical-align: bottom;
-    margin-right: 1rem;
-  }
+      &.active {
+        background-color: @defaultHighlightColor;
+        border-left-color: gray;
+      }
 
-  .active {
-    background-color: @defaultHighlightColor;
-    border-left: 3px solid gray;
-    padding-left: calc(@defaultPadding - 3px);
+      mat-icon {
+        vertical-align: bottom;
+        margin-right: 1rem;
+      }
+    }
   }
 }
