Site content and copyright

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<h1>Hi!</h1>
+<h2>Welcome to Petr Savelev's workspace!</h2>
+
+<hr>
+<p></p>
+<p>
+    This site is my playground to learn and try new web technologies.
+</p>
+<p>
+    You can find info about me in <a href="/about">about</a> section and useful links to learn modern frontend
+    in the <a href="/links">links</a> section.
+</p>
