--- a/src/app/copyright/copyright.component.less
+++ b/src/app/copyright/copyright.component.less
@@ -3,8 +3,6 @@
 :host {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  left: @defaultPadding;
   color: gray;
-  padding-right: @defaultPadding;
-  padding-left: calc(@mainMenuWidth + @defaultPadding);
 }
