--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,11 @@
-<h2>Welcome to Petr Savelev's workspace!</h2>
+<h2>Добро пожаловать!</h2>
 <p>
-    This site is my playground to learn and try new web technologies.
+    Этот сайт - моя песочница для изучения и обкатки новых веб технологий.
 </p>
 <p>
-    You can find info about me in <a href="/about">about</a> section and useful links to learn modern frontend
-    in the <a href="/links">links</a> section.
+    Вы можете найти информацию обо мне разделе <a href="/about">обо мне</a> а также полезные ссылки для изучения
+    новых технологий фронтенд в разделе <a href="/links">ссылки</a>.
+</p>
+<p>
+    <widgets></widgets>
 </p>
