--- a/src/app/widgets/weather-widget/weather-widget.component.html
+++ b/src/app/widgets/weather-widget/weather-widget.component.html
@@ -9,7 +9,7 @@
     <mat-card-content>
         <section>
             <p>Температура: <b>{{temperature | async}}&deg;C</b></p>
-            <p><i>{{temperatureDescription | async}}</i></p>
+            <p>{{temperatureDescription | async}}</p>
         </section>
     </mat-card-content>
 </mat-card>
