--- a/src/app/widgets/daylight-widget/daylight-widget.component.less
+++ b/src/app/widgets/daylight-widget/daylight-widget.component.less
@@ -4,7 +4,7 @@
 
   mat-card-content {
     font-size: 0.9rem;
-    padding: 2 * @defaultPadding 0 0 0 !important;
+    padding: 2 * @defaultPadding 0 !important;
     display: block;
     width: 100%;
 
