Removed !important usage when possible

--- a/src/app/widgets/widgets.component.html
+++ b/src/app/widgets/widgets.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="widget-container">
     <weather-widget class="widget"></weather-widget>
     <currency-widget class="widget"></currency-widget>
     <daylight-widget class="widget"></daylight-widget>
