Added linters; Reformated all code using prettier and stylelint

--- a/src/app/main-app/main-app.component.html
+++ b/src/app/main-app/main-app.component.html
@@ -1,13 +1,15 @@
 <mat-toolbar>
-    <main-header (onMenuClick)="sidenav.toggle()"></main-header>
+  <main-header (menuClick)="sidenav.toggle()"></main-header>
 </mat-toolbar>
-<mat-progress-bar mode="indeterminate" [style.visibility]="loading ? 'visible' : 'hidden'"></mat-progress-bar>
+<mat-progress-bar
+  mode="indeterminate"
+  [style.visibility]="loading ? 'visible' : 'hidden'"></mat-progress-bar>
 <mat-sidenav-container>
-    <mat-sidenav #sidenav opened mode="side">
-        <main-menu></main-menu>
-        <copyright></copyright>
-    </mat-sidenav>
-    <mat-sidenav-content>
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
+  <mat-sidenav #sidenav opened mode="side">
+    <main-menu></main-menu>
+    <copyright></copyright>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
 </mat-sidenav-container>
