--- a/src/app/widgets/currency-widget/currency-widget.component.html
+++ b/src/app/widgets/currency-widget/currency-widget.component.html
@@ -1,25 +1,27 @@
 <mat-card>
-    <mat-card-header>
-        <div mat-card-avatar>
-            <mat-icon>currency_exchange</mat-icon>
-        </div>
-        <mat-card-title>Курсы валют</mat-card-title>
-        <mat-card-subtitle>Евро и доллар к рублю</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-        <section>
-            <p>
-                <label>1&euro;:</label>
-                <label>
-                    <b>{{eurRate | async}}</b><mat-icon>currency_ruble</mat-icon>
-                </label>
-            </p>
-            <p>
-                <label>1&dollar;:</label>
-                <label>
-                    <b>{{usdRate | async}}</b><mat-icon>currency_ruble</mat-icon>
-                </label>
-            </p>
-        </section>
-    </mat-card-content>
+  <mat-card-header>
+    <div mat-card-avatar>
+      <mat-icon>currency_exchange</mat-icon>
+    </div>
+    <mat-card-title>Курсы валют</mat-card-title>
+    <mat-card-subtitle>Евро и доллар к рублю</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <section>
+      <p>
+        <label>1&euro;:</label>
+        <label>
+          <b>{{ eurRate | async }}</b
+          ><mat-icon>currency_ruble</mat-icon>
+        </label>
+      </p>
+      <p>
+        <label>1&dollar;:</label>
+        <label>
+          <b>{{ usdRate | async }}</b
+          ><mat-icon>currency_ruble</mat-icon>
+        </label>
+      </p>
+    </section>
+  </mat-card-content>
 </mat-card>
