--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,10 +1,12 @@
 <ng-container>
-    <button mat-icon-button
-            matTooltip="Toggle main menu"
-            matTooltipPosition="below"
-            matTooltipShowDelay="1500"
-            (click)="onMenuClick.emit()">
-        <mat-icon>menu</mat-icon>
-    </button>
-    <img src="assets/images/angular.png"> <h1>Pikus-dev.space</h1>
+  <button
+    mat-icon-button
+    matTooltip="Toggle main menu"
+    matTooltipPosition="below"
+    matTooltipShowDelay="1500"
+    (click)="menuClick.emit()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <img src="assets/images/angular.png" alt="Angular logo" />
+  <h1>Pikus-dev.space</h1>
 </ng-container>
