--- a/src/app/main-header/main-header.component.less
+++ b/src/app/main-header/main-header.component.less
@@ -1,11 +1,11 @@
-@import "./../globals";
+@import './../globals';
 
 :host {
-  height: @headerHeight;
-  width: 100%;
   display: flex;
-  align-items: center;
   gap: 10px;
+  align-items: center;
+  width: 100%;
+  height: @headerHeight;
 
   img {
     width: 2rem;
