--- a/src/styles.less
+++ b/src/styles.less
@@ -1,9 +1,9 @@
-html, body {
+html,
+body {
+  margin: 0;
   width: 100%;
   height: 100%;
-  margin: 0;
 }
 html * {
   box-sizing: border-box;
 }
-
