--- a/src/widgets/cards/ui/cards.component.html
+++ b/src/widgets/cards/ui/cards.component.html
@@ -1,5 +1,5 @@
-<section class="widget-container">
-  <weather-card class="widget"></weather-card>
-  <currency-card class="widget"></currency-card>
-  <daylight-card class="widget"></daylight-card>
+<section class="cards-container">
+  <weather-card class="card"></weather-card>
+  <currency-card class="card"></currency-card>
+  <daylight-card class="card"></daylight-card>
 </section>
