Updated content pages

--- a/src/pages/about/ui/about.component.html
+++ b/src/pages/about/ui/about.component.html
@@ -1,1 +1,64 @@
-<p>Обо мне</p>
+<h1>Обо мне</h1>
+<h2>Ведущий фронтенд разработчик</h2>
+<p>
+  Я фронтенд разработчик с опытом 15+ лет. В профессию пришел из-за увлеченности
+  компьютерами и программированием. Еще в детстве я состоял в клубе
+  программистов и участвовал в школьных олимпиадах. Я довольно рано понял, что
+  мне нравится визуальная часть, что привело меня к разработке сайтов, а затем
+  мне довольно скоро удалось полностью сфокусироваться на JavaScript (в компании
+  Falk e-Solutions).<br />
+  За свою карьеру мне удалось поработать во разных компаниях, в основном
+  иностранных, но также в нескльких отечественных.
+</p>
+<h2>Технологический стек</h2>
+<mat-chip>JavaScript</mat-chip>
+<mat-chip>TypeScript</mat-chip>
+<mat-chip>AngularJS</mat-chip>
+<mat-chip>Angular</mat-chip>
+<mat-chip>Angular Material</mat-chip>
+<mat-chip>NgRx</mat-chip>
+<mat-chip>Feature sliced design (FSD)</mat-chip>
+<mat-chip>LESS</mat-chip>
+<mat-chip>Git</mat-chip>
+<mat-chip>Java</mat-chip>
+<mat-chip>Node.js</mat-chip>
+<mat-chip>npm</mat-chip>
+<mat-chip>Linux</mat-chip>
+<mat-chip>Jira</mat-chip>
+<mat-chip>Teams</mat-chip>
+<mat-chip>Jenkins</mat-chip>
+<mat-chip>EsLit</mat-chip>
+<mat-chip>Prettier</mat-chip>
+<mat-chip>StyleLint</mat-chip>
+<p>&nbsp;</p>
+<h2>Простыми словами</h2>
+<p>
+  Я семейный человек, отец 4-х летней прекрасной дочери. Люблю читать книги. Мне
+  нравятся наука, особенно физика, астрономия.
+</p>
+<p>
+  Я много путешествовал по Европе (Австрия, Германия, Испания, Италия, Чехия,
+  Венгрия, Болгария, Турция, Украина, Финляндия, Швеция, Эстония, Латвия) и Азии
+  (Китай, Южная Корея, Таиланд, Вьетнам, Камбоджа, Малайзия). Во время работы в
+  компании Zedo Inc. я был в командировке в Индии в течении месяца.
+</p>
+<p>
+  В свободное время я люблю кататься на своем снегоболотоходе, исследуя новые
+  территории. Также я фанат велосипедов. Однажды я провел целый год и все сезоны
+  (включая снежную зиму), используя свой велосипед для ежедневных поездок в офис
+  моей компании.
+</p>
+<p>
+  В настоящее время я нахожусь в поиске хорошей позиции в крупной компании. Я
+  ищу работу в должности "Ведущий Angular разрабочик - тех. лид", для работы
+  удаленно из Санкт-Петербурга. В первую очередь мне было бы интересно работать
+  в международной компании а также в крупных российских софтверных компаниях с
+  именем.
+</p>
+<p>Если у вас есть предложение, с радостью его рассмотрю.</p>
+
+<h2>Контакты</h2>
+<label>Мой телеграм:</label>
+<a href="https://t.me/pikus_spb">@pikus_spb</a><br />
+<label>E-mail:</label>
+<a href="mailto:petr.savelev.direct@gmail.com">petr.savelev.direct@gmail.com</a>
