--- a/src/pages/links/ui/links.component.html
+++ b/src/pages/links/ui/links.component.html
@@ -1,1 +1,48 @@
-<p>Ссылки</p>
+<h1>Мои проекты</h1>
+<mat-list>
+  <mat-list-item
+    ><a href="https://pikus.spb.ru/about" target="_blank">pikus.spb.ru</a> -
+    личная страница с демо и CV
+  </mat-list-item>
+  <mat-list-item
+    ><a href="https://book-play.ru/library" target="_blank">book-play.ru</a> -
+    сервис чтения книг голосом
+  </mat-list-item>
+  <mat-list-item
+    ><a href="https://pikus-dev.space">pikus-dev.space</a> - моя песочница (этот
+    сайт)
+  </mat-list-item>
+</mat-list>
+
+<p>&nbsp;</p>
+<h1>Полезные ссылки для самостоятельного изучения технологий</h1>
+<h2>Angular</h2>
+<mat-list>
+  <mat-list-item
+    ><a
+      target="_blank"
+      href="https://www.youtube.com/watch?v=bV8emCBmFHk&list=PLC3y8-rFHvwilEuCqFGTL5Gt5U6deIrsU"
+      >Angular Material course</a
+    >
+    - курс по компонентам Angular Material от индуса (англ.)
+  </mat-list-item>
+  <mat-list-item
+    ><a
+      target="_blank"
+      href="https://www.youtube.com/playlist?list=PLV-DQnYj14bRFWMmuT6ptSL4v5fxMJnOS"
+      >NgRx course</a
+    >
+    - курс по NgRx (англ.)
+  </mat-list-item>
+  <mat-list-item
+    ><a target="_blank" href="https://www.youtube.com/watch?v=2cV4i-g6Oxc"
+      >Стратегия обнаружения изменений в Angular</a
+    >
+    - от Максима Иванова, выступление на конференции
+  </mat-list-item>
+</mat-list>
+<h2>RxJs</h2>
+<h2>Архитектура фронтенд</h2>
+<h2>Алгоритмы и структуры данных</h2>
+<h2>JavaScript</h2>
+<h2>TypeScript</h2>
