Updated content pages

--- a/src/pages/about/ui/about.component.html
+++ b/src/pages/about/ui/about.component.html
@@ -1,25 +1,35 @@
 <h1>Обо мне</h1>
+<img src="/shared/assets/images/me.png" />
 <h2>Ведущий фронтенд разработчик</h2>
 <p>
-  Я фронтенд разработчик с опытом 15+ лет. В профессию пришел из-за увлеченности
-  компьютерами и программированием. Еще в детстве я состоял в клубе
-  программистов и участвовал в школьных олимпиадах. Я довольно рано понял, что
+  Я фронтенд разработчик с опытом 15+ лет. В профессию пришел из-за увлечения
+  компьютерами и программированием еще с детства. В школе я состоял в клубе
+  программистов и участвовал в нескольких олимпиадах. Я довольно рано понял, что
   мне нравится визуальная часть, что привело меня к разработке сайтов, а затем
-  мне довольно скоро удалось полностью сфокусироваться на JavaScript (в компании
-  Falk e-Solutions).<br />
-  За свою карьеру мне удалось поработать во разных компаниях, в основном
-  иностранных, но также в нескльких отечественных.
+  мне удалось полностью сфокусироваться на JavaScript.<br />
+  На данный момент я стал больше увлекаться архитектурными решениями в сфере
+  фронтенд (н.п.feature sliced design - FSD), так как понял, что в большинстве
+  современных веб приложениях отсутствие архитектуры - главная проблема.<br />
+  За свою карьеру мне удалось поработать в качестве фроненд разработчика в
+  компаниях с именем (н.п. DoubleClick Inc., Citibank, N.A. и Genesys Inc.)
 </p>
-<h2>Технологический стек</h2>
+<h2>Мой технологический стек</h2>
+<mat-chip>HTML</mat-chip>
+<mat-chip>CSS</mat-chip>
+<mat-chip>LESS</mat-chip>
 <mat-chip>JavaScript</mat-chip>
 <mat-chip>TypeScript</mat-chip>
 <mat-chip>AngularJS</mat-chip>
 <mat-chip>Angular</mat-chip>
 <mat-chip>Angular Material</mat-chip>
+<mat-chip>RxJs</mat-chip>
 <mat-chip>NgRx</mat-chip>
+<mat-chip>EsLit</mat-chip>
+<mat-chip>Prettier</mat-chip>
+<mat-chip>StyleLint</mat-chip>
 <mat-chip>Feature sliced design (FSD)</mat-chip>
-<mat-chip>LESS</mat-chip>
-<mat-chip>Git</mat-chip>
+<mat-chip>GitHub</mat-chip>
+<mat-chip>GitLab</mat-chip>
 <mat-chip>Java</mat-chip>
 <mat-chip>Node.js</mat-chip>
 <mat-chip>npm</mat-chip>
@@ -27,11 +37,10 @@
 <mat-chip>Jira</mat-chip>
 <mat-chip>Teams</mat-chip>
 <mat-chip>Jenkins</mat-chip>
-<mat-chip>EsLit</mat-chip>
-<mat-chip>Prettier</mat-chip>
-<mat-chip>StyleLint</mat-chip>
+<mat-chip>Code review</mat-chip>
 <p>&nbsp;</p>
-<h2>Простыми словами</h2>
+
+<h2>Обо мне простыми словами</h2>
 <p>
   Я семейный человек, отец 4-х летней прекрасной дочери. Люблю читать книги. Мне
   нравятся наука, особенно физика, астрономия.
@@ -43,10 +52,10 @@
   компании Zedo Inc. я был в командировке в Индии в течении месяца.
 </p>
 <p>
-  В свободное время я люблю кататься на своем снегоболотоходе, исследуя новые
-  территории. Также я фанат велосипедов. Однажды я провел целый год и все сезоны
-  (включая снежную зиму), используя свой велосипед для ежедневных поездок в офис
-  моей компании.
+  В свободное время я люблю кататься на своем снегоболотоходе и снегоходе,
+  исследуя новые территории. Также я фанат велосипедов. Однажды я провел целый
+  год и все сезоны (включая снежную зиму), используя свой велосипед для
+  ежедневных поездок в офис моей компании.
 </p>
 <p>
   В настоящее время я нахожусь в поиске хорошей позиции в крупной компании. Я
