--- a/src/pages/links/ui/links.component.html
+++ b/src/pages/links/ui/links.component.html
@@ -28,149 +28,23 @@
 <p>&nbsp;</p>
 <h1>Полезные ссылки для самостоятельного изучения технологий</h1>
 
-<h2>Angular</h2>
-<mat-list>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=bV8emCBmFHk&list=PLC3y8-rFHvwilEuCqFGTL5Gt5U6deIrsU"
-      >Angular Material course</a
-    >
-    - курс по компонентам Angular Material (англ.)
-  </mat-list-item>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/playlist?list=PLV-DQnYj14bRFWMmuT6ptSL4v5fxMJnOS"
-      >NgRx course</a
-    >
-    - курс по NgRx (англ.)
-  </mat-list-item>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=2cV4i-g6Oxc"
-      >Стратегия обнаружения изменений в Angular</a
-    >
-    - выступление Максима Иванова о стратегии обнаружения изменений в Angular
-  </mat-list-item>
-</mat-list>
-
-<h2>RxJs</h2>
-<mat-list>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/playlist?list=PL55RiY5tL51pHpagYcrN9ubNLVXF8rGVi"
-      >Understanding RxJS</a
-    >
-    - базовый курс по RxJs (англ.)
-  </mat-list-item>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=C9eaRG1dNlg"
-      >RxJs Subject, BehaviorSubject, ReplySubject</a
-    >
-    - подробнее о subjects
-  </mat-list-item>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=PF3mFOZn3MQ"
-      >WTF is a HOT observable?</a
-    >
-    - подробнее о горячих подписках (англ.)
-  </mat-list-item>
-  <mat-list-item>
-    <img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=Byttv3YpjQk"
-      >I only ever use *these* RxJS operators to code reactively</a
-    >
-    - основные оператоы в RxJs (англ.)
-  </mat-list-item>
-  <mat-list-item>
-    <img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=xzxHRzUPaP8"
-      >Hot vs cold Observable || Multicast vs Unicast in Angular</a
-    >
-    - еще раз о горяих и холодных подисках (англ.)
-  </mat-list-item>
-  <mat-list-item>
-    <img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=oKqcL-iMITY"
-      >Hot vs Cold Observable in RxJs</a
-    >
-    - еще раз о горяих и холодных подисках от Дмитрия Меженского (англ.)
-  </mat-list-item>
-</mat-list>
-
-<h2>Архитектура фронтенд</h2>
-<mat-list>
-  <mat-list-item>
-    <img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=TxZwqVTaCmA"
-      >SOLID ПРИНЦИПЫ простым языком</a
-    >
-  </mat-list-item>
-  <mat-list-item>
-    <img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=c3JGBdxfYcU"
-      >Архитектура современных FRONTEND приложений</a
-    >
-  </mat-list-item>
-  <mat-list-item>
-    <img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=BEMx3iAHP2I"
-      >Архитектурная методология Feature Sliced</a
-    >
-    - очень доходчивое выступление Даниила Крохмаль на Krasnodar Dev Days
-  </mat-list-item>
-  <mat-list-item>
-    <img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/watch?v=dtjULd469Ng"
-      >Feature-Sliced Design</a
-    >
-    - воркшоп от одного мз разрабочиков FSD, Ильи Азина
-  </mat-list-item>
-</mat-list>
-<h2>Алгоритмы и структуры данных</h2>
-<h2>JavaScript</h2>
-<h2>TypeScript</h2>
-<h2>Подкасты</h2>
-<mat-list>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/@webstandards_ru"
-      >Веб-стандарты</a
-    >
-    - Основой русский фронтенд подкаст. Полезные новости в сфере фронтенд каждую
-    неделю.
-  </mat-list-item>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/@devschacht"
-      >Дев шахта</a
-    >
-    Канал Андрея Мелихова - мысли и решения автора в области фроненд. На данный
-    момент заморожен.
-  </mat-list-item>
-  <mat-list-item
-    ><img src="https://www.youtube.com/favicon.ico" /><a
-      target="_blank"
-      href="https://www.youtube.com/@DecodedFrontend"
-      >Decoded Frontend</a
-    >
-    Канал Дмитрия Меженского об Angular. В основном рассмотриваются advanced
-    техники. Очень полезный источник информации для Angular разработчиков.
-  </mat-list-item>
-</mat-list>
+<mat-accordion *ngFor="let section of links | async">
+  <mat-expansion-panel hideToggle>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        {{ section.sectionName }}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <mat-list>
+      <mat-list-item *ngFor="let link of section.children">
+        <img *ngIf="link.server" src="{{ link.server }}/favicon.ico" />
+        <a target="_blank" [attr.href]="link.server + link.link">{{
+          link.title
+        }}</a>
+        <ng-container *ngIf="link.description">
+          - {{ link.description }}
+        </ng-container>
+      </mat-list-item>
+    </mat-list>
+  </mat-expansion-panel>
+</mat-accordion>
