Links data update

--- a/src/pages/links/ui/links.component.html
+++ b/src/pages/links/ui/links.component.html
@@ -26,7 +26,7 @@
 </mat-list>
 
 <p>&nbsp;</p>
-<h1>Полезные ссылки для самостоятельного изучения технологий</h1>
+<h1>Полезные ссылки для самостоятельного изучения</h1>
 
 <mat-accordion *ngFor="let section of links | async">
   <mat-expansion-panel hideToggle>
