--- a/src/pages/about/ui/about.component.html
+++ b/src/pages/about/ui/about.component.html
@@ -8,61 +8,66 @@
   мне нравится визуальная часть, что привело меня к разработке сайтов, а затем
   мне удалось полностью сфокусироваться на JavaScript.<br />
   На данный момент я стал больше увлекаться архитектурными решениями в сфере
-  фронтенд (н.п.feature sliced design - FSD), так как понял, что в большинстве
+  фронтенд (н.п.feature sliced design), так как понял, что в большинстве
   современных веб приложениях отсутствие архитектуры - главная проблема.<br />
 </p>
 <h2>Мой технологический стек</h2>
 <mat-chip>HTML</mat-chip>
 <mat-chip>CSS</mat-chip>
 <mat-chip>LESS</mat-chip>
+<mat-chip>SASS</mat-chip>
 <mat-chip>JavaScript</mat-chip>
 <mat-chip>TypeScript</mat-chip>
 <mat-chip>AngularJS</mat-chip>
 <mat-chip>Angular</mat-chip>
 <mat-chip>Angular Material</mat-chip>
+<mat-chip>PrimeNG</mat-chip>
 <mat-chip>RxJs</mat-chip>
 <mat-chip>NgRx</mat-chip>
-<mat-chip>EsLit</mat-chip>
+<mat-chip>Ng monorepo</mat-chip>
+<mat-chip>EsLint</mat-chip>
+<mat-chip>EsBuild</mat-chip>
 <mat-chip>Prettier</mat-chip>
 <mat-chip>StyleLint</mat-chip>
-<mat-chip>Feature sliced design (FSD)</mat-chip>
-<mat-chip>GitHub</mat-chip>
-<mat-chip>GitLab</mat-chip>
-<mat-chip>Java</mat-chip>
+<mat-chip>Feature sliced design</mat-chip>
 <mat-chip>Node.js</mat-chip>
 <mat-chip>npm</mat-chip>
+<mat-chip>Express</mat-chip>
+<mat-chip>Karma</mat-chip>
+<mat-chip>Jasmine</mat-chip>
+<mat-chip>Jest</mat-chip>
+<mat-chip>MySQL</mat-chip>
+<mat-chip>Postgres</mat-chip>
+<mat-chip>Git</mat-chip>
+<mat-chip>Java</mat-chip>
 <mat-chip>Linux</mat-chip>
-<mat-chip>Jira</mat-chip>
-<mat-chip>Teams</mat-chip>
-<mat-chip>Jenkins</mat-chip>
 <mat-chip>Code review</mat-chip>
+<mat-chip>Аналитика</mat-chip>
+<mat-chip>Коммуникативная компетентность</mat-chip>
 <p>&nbsp;</p>
 
 <h2>Обо мне простыми словами</h2>
 <p>
-  Я семейный человек, отец 4-х летней прекрасной дочери. Люблю читать книги. Мне
-  нравятся наука, особенно физика, астрономия.
+  Я семейный человек и отец замечательной дочери. Люблю читать книги и увлекаюсь
+  наукой, особенно физикой и астрономией.
 </p>
 <p>
-  Я много путешествовал по Европе (Австрия, Германия, Испания, Италия, Чехия,
+  Много путешествовал по Европе (Австрия, Германия, Испания, Италия, Чехия,
   Венгрия, Болгария, Турция, Украина, Финляндия, Швеция, Эстония, Латвия) и Азии
-  (Китай, Южная Корея, Таиланд, Вьетнам, Камбоджа, Малайзия). Во время работы в
-  компании Zedo Inc. я был в командировке в Индии в течении месяца.
+  (Китай, Южная Корея, Таиланд, Вьетнам, Камбоджа, Малайзия). В рамках работы в
+  компании Zedo Inc. проходил месячную командировку в Индию.
 </p>
 <p>
-  В свободное время я люблю кататься на своем снегоболотоходе и снегоходе,
-  исследуя новые территории. Также я фанат велосипедов. Однажды я провел целый
-  год и все сезоны (включая снежную зиму), используя свой велосипед для
-  ежедневных поездок в офис моей компании.
+  В свободное время увлекаюсь катанием на болотоходе и снегоходе, а также
+  исследованием исторических артефактов. Я — большой поклонник велосипедов: один
+  год ездил на велосипеде в офис во все сезоны, включая зиму.
 </p>
 <p>
-  В настоящее время я нахожусь в поиске хорошей позиции в крупной компании. Я
-  ищу работу в должности "Ведущий Angular разрабочик - тех. лид", для работы
-  удаленно из Санкт-Петербурга. В первую очередь мне было бы интересно работать
-  в международной компании а также в крупных российских софтверных компаниях с
-  именем.
+  В настоящее время нахожусь в поиске позиции в крупной компании на должности
+  "Ведущий фронтенд-разработчик / Технический лидер" с возможностью удалённой
+  работы из Санкт-Петербурга.
 </p>
-<p>Если у вас есть предложение, с радостью его рассмотрю.</p>
+<p>Буду рад рассмотреть ваши предложения.</p>
 
 <h2>Контакты</h2>
 <label>Мой телеграм:</label>
