--- a/src/pages/links/ui/links.component.html
+++ b/src/pages/links/ui/links.component.html
@@ -12,7 +12,7 @@
     -->
   <mat-list-item
     ><img src="https://book-play.ru/favicon.ico" /><a
-      href="https://book-play.ru/library"
+      href="https://book-play.ru"
       target="_blank"
       >book-play.ru</a
     >
